Fix alignment issues

--- a/index.css
+++ b/index.css
@@ -10,11 +10,11 @@
 
   /* font-sizes */
   --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
-  --fs-800: 6.25rem;
-  --fs-700: 3.5rem;
-  --fs-600: 2rem;
+  --fs-800: 3.5rem;
+  --fs-700: 1.5rem;
+  --fs-600: 1rem;
   --fs-500: 1rem;
-  --fs-400: 1.125rem;
+  --fs-400: 0.9375rem;
   --fs-300: 1rem;
   --fs-200: 0.875rem;
 
@@ -89,8 +89,10 @@ body {
   background-color: hsl(var(--clr-dark));
   line-height: 1.5;
   min-height: 100vh;
+
   display: grid;
   grid-template-rows: min-content 1fr;
+
   overflow-x: hidden;
 }
 
@@ -278,8 +280,8 @@ select {
 .large-button {
   font-size: 2rem;
   position: relative;
-  display: inline-grid;
   z-index: 1;
+  display: inline-grid;
   place-items: center;
   padding: 0 2em;
   border-radius: 50%;
@@ -293,7 +295,7 @@ select {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: hsl(var(--clr-white) / 0.15);
+  background: hsl(var(--clr-white) / 0.1);
   border-radius: 50%;
   opacity: 0;
   transition: opacity 500ms linear, transform 750ms ease-in-out;
@@ -311,10 +313,6 @@ select {
   margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
 }
 
-.logo {
-  margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
-}
-
 .primary-header {
   justify-content: space-between;
   align-items: center;
@@ -326,7 +324,8 @@ select {
   list-style: none;
   padding: 0;
   margin: 0;
-  background: hsl(var(--clr-dark) / 0.95);
+  background: hsl(var(--clr-white) / 0.05);
+  backdrop-filter: blur(1.5rem);
 }
 
 .primary-navigation a {
@@ -336,13 +335,6 @@ select {
 .primary-navigation a > span {
   font-weight: 700;
   margin-right: 0.5em;
-}
-
-@supports (backdrop-filter: blur(1rem)) {
-  .primary-navigation {
-    background: hsl(var(--clr-white) / 0.05);
-    backdrop-filter: blur(1.5rem);
-  }
 }
 
 .mobile-nav-toggle {
@@ -362,12 +354,15 @@ select {
     transform: translateX(100%);
     transition: transform 500ms ease-in-out;
   }
-  .primary-navigation.underline-indicators > .active {
-    border: 0;
-  }
+
   .primary-navigation[data-visible="true"] {
     transform: translateX(0);
   }
+
+  .primary-navigation.underline-indicators > .active {
+    border: 0;
+  }
+
   .mobile-nav-toggle {
     display: block;
     position: absolute;
@@ -376,15 +371,17 @@ select {
     top: 2rem;
     background: transparent;
     background-image: url(./assets/shared/icon-hamburger.svg);
-    background-position: center;
     background-repeat: no-repeat;
+    background-position: center;
     width: 1.5rem;
     aspect-ratio: 1;
     border: 0;
   }
+
   .mobile-nav-toggle[aria-expanded="true"] {
     background-image: url(./assets/shared/icon-close.svg);
   }
+
   .mobile-nav-toggle:focus-visible {
     outline: 5px solid white;
     outline-offset: 5px;
@@ -418,6 +415,7 @@ select {
   nav {
     order: 2;
   }
+
   .primary-navigation {
     margin-block: 2rem;
   }
@@ -490,16 +488,21 @@ body {
 /* ----------------------------- */
 /* Layout                        */
 /* ----------------------------- */
+
 .grid-container {
   text-align: center;
   display: grid;
   place-items: center;
   padding-inline: 1rem;
-  margin-bottom: 3rem;
+  padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
+}
+
+.numbered-title {
+  grid-area: title;
 }
 
 /* destination layout */
@@ -549,17 +552,18 @@ body {
   }
 }
 
-@media (min-width: 45rem) {
+@media (min-width: 45em) {
   .grid-container {
+    text-align: left;
     column-gap: var(--container-gap, 2rem);
-    grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(
-        2rem,
+    grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(
+        1rem,
         1fr
       );
   }
 
   .grid-container--home {
-    padding-bottom: 6rem;
+    padding-bottom: max(6rem, 20vh);
     align-items: end;
   }
 
@@ -585,7 +589,7 @@ body {
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: min(6vw, 6rem);
     justify-content: start;
   }
 }
